--- a/app/src/main/res/layout/activity_slpah.xml
+++ b/app/src/main/res/layout/activity_slpah.xml
@@ -6,7 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".activity.SlpahActivity">
    <ImageView
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:src="@mipmap/launchimage"/>
+       android:layout_alignParentBottom="true"
+       android:layout_centerHorizontal="true"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:src="@mipmap/slpah"
+
+       />
 </RelativeLayout>
