--- a/app/src/main/res/layout/fragment_my_car.xml
+++ b/app/src/main/res/layout/fragment_my_car.xml
@@ -96,7 +96,7 @@
                 android:background="@color/colorTextde" />
 
             <Button
-                android:background="@android:color/white"
+                android:background="@null"
                 android:id="@+id/record_car"
                 android:layout_marginBottom="5dp"
                 android:layout_width="0dp"
