--- a/app/src/main/res/layout/fragment_chat_car.xml
+++ b/app/src/main/res/layout/fragment_chat_car.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
     <com.amap.api.maps.MapView
-        android:id="@+id/map"
+        android:id="@+id/chat_map"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </com.amap.api.maps.MapView>
