--- a/app/src/main/res/layout/activity_messenger.xml
+++ b/app/src/main/res/layout/activity_messenger.xml
@@ -3,7 +3,8 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-
+<include
+    layout="@layout/toolbar_layout"/>
     <car.com.wlc.cardemo.chatmessage.chat.views.ChatView
         android:id="@+id/chat_view"
         android:layout_width="match_parent"
