--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -7,35 +7,37 @@
     android:orientation="vertical"
     tools:context="car.com.wlc.cardemo.activity.CarShopActivity">
 
-<RelativeLayout
-    android:layout_margin="5dp"
-    android:layout_width="match_parent"
-    android:layout_height="40dp">
-<ImageView
-    android:id="@+id/car_shop_close_btn"
-    android:layout_alignParentLeft="true"
-    android:layout_centerInParent="true"
-    android:src="@mipmap/iapppay_title_button_back_on"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content" />
-    <TextView
-        android:text="车服商城"
-        android:textSize="20sp"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_margin="5dp">
 
-        android:layout_centerInParent="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/car_shop_close_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerInParent="true"
+            android:src="@mipmap/iapppay_title_button_back_on" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="汽车服务"
+            android:textSize="20sp" />
+    </RelativeLayout>
+
     <com.bigkoo.convenientbanner.ConvenientBanner
         android:id="@+id/carshop_banner"
         android:layout_width="match_parent"
-        android:layout_height="150dp">
-    </com.bigkoo.convenientbanner.ConvenientBanner>
-<GridView
-    android:numColumns="4"
-    android:id="@+id/carshop_girdview"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+        android:layout_height="150dp"></com.bigkoo.convenientbanner.ConvenientBanner>
 
-</GridView>
+    <GridView
+        android:id="@+id/carshop_girdview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:numColumns="4">
+
+    </GridView>
 </LinearLayout>
