--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,9 +1,12 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/tools"
+    android:id="@+id/fragment_home_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#f1eded">
+    android:background="#f1eded"
+
+    >
 
 
     <!--<LinearLayout-->
@@ -105,37 +108,7 @@
     <!--android:translationX="160dp" />-->
     <!--</car.com.wlc.cardemo.view.MultiDirectionSlidingDrawer>-->
     <!--</LinearLayout>-->
-    <com.getbase.floatingactionbutton.FloatingActionsMenu
-        android:id="@+id/fab_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
-        android:layout_margin="16dp"
-        app:fab_labelStyle="@style/menu_labels_style"
-        fab:fab_addButtonColorNormal="@color/white"
-        fab:fab_addButtonColorPressed="@color/white_pressed"
-        fab:fab_addButtonPlusIconColor="@color/half_black"
-        fab:fab_addButtonSize="normal"
-        fab:fab_labelsPosition="left">
 
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fab_icon="@mipmap/cxz_sos_help"
-            app:fab_title="一键救援"
-            fab:fab_colorNormal="@color/white"
-            fab:fab_colorPressed="@color/white_pressed"
-            fab:fab_size="mini" />
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fab_icon="@mipmap/cxz_sos_safety"
-            app:fab_title="在线报险"
-            fab:fab_colorNormal="@color/white"
-            fab:fab_colorPressed="@color/white_pressed"
-            fab:fab_size="mini" />
-    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
     <LinearLayout
         android:id="@+id/bootom_lin"
@@ -147,57 +120,58 @@
         <!-- TODO: Update blank fragment layout -->
 
         <RelativeLayout
-            android:focusable="true"
-            android:focusableInTouchMode="true"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@android:color/white"
-            >
+            android:focusable="true"
+            android:focusableInTouchMode="true">
+
             <TextView
-            android:id="@+id/location_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerInParent="true"
-            android:layout_gravity="center"
-            android:layout_marginLeft="8dp"
-            android:drawableRight="@mipmap/em_mm_title_right"
-            android:text="上海市"
-            android:textColor="#666"
-            android:textSize="16sp" />
+                android:id="@+id/location_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_centerInParent="true"
+                android:layout_gravity="center"
+                android:layout_marginLeft="8dp"
+                android:drawableRight="@mipmap/em_mm_title_right"
+                android:text="上海市"
+                android:textColor="#666"
+                android:textSize="16sp" />
+
             <RelativeLayout
 
-            android:layout_width="wrap_content"
-            android:layout_height="30dp"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_toRightOf="@id/location_text"
-            android:background="@drawable/search_btn">
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_toRightOf="@id/location_text"
+                android:background="@drawable/search_btn">
 
-            <EditText
-            android:layout_width="match_parent"
+                <EditText
+                    android:layout_width="match_parent"
 
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="8dp"
-            android:background="@null"
-            android:editable="true"
-            android:hint="请输入你查询的车辆"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:textColor="#999"
-            android:textSize="12sp" />
+                    android:layout_height="match_parent"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerInParent="true"
+                    android:layout_marginLeft="8dp"
+                    android:background="@null"
+                    android:editable="true"
+                    android:hint="请输入你查询的车辆"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:textColor="#999"
+                    android:textSize="12sp" />
 
-            <ImageView
+                <ImageView
 
-            android:id="@+id/search_btn"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="center"
-            android:src="@mipmap/ic_lost_find" />
+                    android:id="@+id/search_btn"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_gravity="center"
+                    android:src="@mipmap/ic_lost_find" />
             </RelativeLayout>
 
         </RelativeLayout>
@@ -307,6 +281,7 @@
                     android:layout_marginTop="5dp"
                     android:background="@mipmap/price"
                     android:gravity="center">
+
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
@@ -314,9 +289,11 @@
                         android:layout_weight="1.8"
                         android:gravity="center"
                         android:orientation="vertical">
+
                         <TextView
                             style="@style/carStyle"
                             android:text="天天车价" />
+
                         <TextView
                             android:id="@+id/home_car_price"
                             style="@style/carStyle"
@@ -324,6 +301,7 @@
                             android:text="保值率: 4.5星"
                             android:textSize="12sp" />
                     </LinearLayout>
+
                     <car.com.wlc.cardemo.view.WaveView
                         android:id="@+id/wave2"
                         android:layout_width="95dp"
@@ -347,8 +325,8 @@
                         android:layout_height="match_parent"
                         android:layout_marginRight="10dp"
                         android:layout_weight="1.8"
-                        android:gravity="center"
-                        android:baselineAligned="false">
+                        android:baselineAligned="false"
+                        android:gravity="center">
 
                         <TextView
                             style="@style/carStyle"
@@ -615,4 +593,38 @@
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
+
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:id="@+id/fab_menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        app:fab_labelStyle="@style/menu_labels_style"
+        fab:fab_addButtonColorNormal="@color/white"
+        fab:fab_addButtonColorPressed="@color/white_pressed"
+        fab:fab_addButtonPlusIconColor="@color/half_black"
+        fab:fab_addButtonSize="normal"
+        fab:fab_labelsPosition="left">
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_icon="@mipmap/cxz_sos_help"
+            app:fab_title="一键救援"
+            fab:fab_colorNormal="@color/white"
+            fab:fab_colorPressed="@color/white_pressed"
+            fab:fab_size="mini" />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_icon="@mipmap/cxz_sos_safety"
+            app:fab_title="在线报险"
+            fab:fab_colorNormal="@color/white"
+            fab:fab_colorPressed="@color/white_pressed"
+            fab:fab_size="mini" />
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
+
+
 </FrameLayout>
